# bookmarks

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release-github.yml  release-rust.yml
crates/bookmarks-app/: Cargo.toml  README.md  tauri.conf.json
crates/bookmarks-app/capabilities/: default.json
crates/bookmarks-app/src/: lib.rs
crates/bookmarks-cli/: Cargo.toml
crates/bookmarks-cli/src/: cli.rs
crates/bookmarks-core/: Cargo.toml  README.md
crates/bookmarks-core/src/: config.rs  lib.rs  open.rs  storage.rs  strings.rs  toml_storage.rs
crates/bookmarks-py/: Cargo.toml
crates/bookmarks-py/src/: lib.rs
crates/bookmarks-webapp/: Cargo.toml  README.md
crates/bookmarks-webapp/src/: lib.rs
py/bookmarks/: __init__.py  core.pyi
