[package]
name = "dkdc-bookmarks-app"
version = "0.5.1"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
description = "Tauri desktop shell for bookmarks"
repository = "https://github.com/dkdc-io/bookmarks"
license = "MIT"
readme = "README.md"
build = "build.rs"

[lib]
name = "bookmarks_app"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
dkdc-bookmarks-core = { version = "0.5.1", path = "../bookmarks-core" }
dkdc-bookmarks-webapp = { version = "0.5.1", path = "../bookmarks-webapp" }
open = "5"
tauri = "2.11.1"

[build-dependencies]
tauri-build = "2.6.1"
