[package]
name = "dkdc-bookmarks-core"
version = "0.3.3"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]
description = "Core library for bookmarks"
repository = "https://github.com/dkdc-io/bookmarks"
license = "MIT"
readme = "README.md"

[lib]
name = "bookmarks_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
dirs = "6"
open = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3"
