[package]
name = "dkdc-bookmarks-webapp"
version = "0.5.0"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
description = "Local webapp for bookmarks (axum)"
repository = "https://github.com/dkdc-io/bookmarks"
license = "MIT"
readme = "README.md"

[lib]
name = "bookmarks_webapp"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
dkdc-bookmarks-core = { version = "0.5.0", path = "../bookmarks-core" }
axum = "0.8"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
